new implementation in orders, redirections to pending order in kpi, implementation of history orders with history for changes create, confirm, cancell, pending
